test_scores/negative_dimers/features/P23508.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P23508.pkl.xz